fdo#63023 incorrect RTF background color in header

(cherry picked from commits 3d4fef85d05269e613316a7af6245f05d207d76e and
08dc5de900b2e5cca9d9443fc5d4ea7756842af9)

Change-Id: I33f5c8a856206860ac9cdb23dd6b5222cb785bf7