sw/qa/extras/inc/swmodeltestbase.hxx
@@ -29,6 +29,8 @@
 #include <com/sun/star/style/XStyleFamiliesSupplier.hpp>
 #include <com/sun/star/text/XTextDocument.hpp>
 #include <com/sun/star/text/XTextRange.hpp>
+#include <com/sun/star/text/XTextTable.hpp>
+#include <com/sun/star/table/XCell.hpp>
 
 #include <test/bootstrapfixture.hxx>
 #include <unotest/macros_test.hxx>
@@ -189,19 +191,39 @@ protected:
     }
 
     // Get paragraph (counted from 1), optionally check it contains the given text.
-    uno::Reference< text::XTextRange > getParagraph( int number, OUString content = OUString() ) const
+    uno::Reference<text::XTextContent> getParagraphOrTable(int number, uno::Reference<text::XText> xText = uno::Reference<text::XText>()) const
     {
-        uno::Reference<text::XTextDocument> textDocument(mxComponent, uno::UNO_QUERY);
-        uno::Reference<container::XEnumerationAccess> paraEnumAccess(textDocument->getText(), uno::UNO_QUERY);
+        uno::Reference<container::XEnumerationAccess> paraEnumAccess;
+        if (xText.is())
+            paraEnumAccess.set(xText, uno::UNO_QUERY);
+        else
+        {
+            uno::Reference<text::XTextDocument> textDocument(mxComponent, uno::UNO_QUERY);
+            paraEnumAccess.set(textDocument->getText(), uno::UNO_QUERY);
+        }
         uno::Reference<container::XEnumeration> paraEnum = paraEnumAccess->createEnumeration();
         for( int i = 1;
              i < number;
              ++i )
             paraEnum->nextElement();
-        uno::Reference< text::XTextRange > paragraph( paraEnum->nextElement(), uno::UNO_QUERY );
+        uno::Reference< text::XTextContent> const xElem(paraEnum->nextElement(),
+                uno::UNO_QUERY_THROW);
+        return xElem;
+    }
+
+    uno::Reference< text::XTextRange > getParagraph( int number, OUString content = OUString() ) const
+    {
+        uno::Reference<text::XTextRange> const xParagraph(
+                getParagraphOrTable(number), uno::UNO_QUERY_THROW);
         if( !content.isEmpty())
-            CPPUNIT_ASSERT_EQUAL( content, paragraph->getString());
-        return paragraph;
+            CPPUNIT_ASSERT_EQUAL( content, xParagraph->getString());
+        return xParagraph;
+    }
+
+    uno::Reference<text::XTextRange> getParagraphOfText(int number, uno::Reference<text::XText> xText) const
+    {
+        uno::Reference<text::XTextRange> const xParagraph(getParagraphOrTable(number, xText), uno::UNO_QUERY_THROW);
+        return xParagraph;
     }
 
     /// Get run (counted from 1) of a paragraph, optionally check it contains the given text.
